@@ -1,5 +1,6 @@
 version 0.9.1+
-	* More flexible mapreduce() function
+	* More flexible mapreduce()/map() functions
+	* Make TaskGenerator pickle()able and hash()able
 
 version 0.9.1 Mon Jun 11 2012 by luispedro
 	* Add --locks-only option to cleanup subcommand
